# flecs-cs

./: .gitignore  .gitmodules  LICENSE  README.md  bindgen_ast_linux.json  bindgen_ast_osx.json  bindgen_ast_win.json  bindgen_cs.json  flecs.props  flecs.sln  flecs.sln.DotSettings  library.sh
.github/workflows/: bindgen.yml  build.yml  commit.yml  pr.yml  release.yml
bindgen/: appsettings.json  ast_linux.json  ast_osx.json  ast_win.json  config-build-c-library.json  config-cs.json  config-extract-linux.json  config-extract-macos.json  config-generate-cs-core.json  config-generate-cs-unity.json  config-generate-cs.json  config-windows.json  cs.json  generate.sh  read_c_code.sh  write_csharp_code.sh
bindgen/x-ast/: ast-cross-platform.json
src/c/production/flecs/: CMakeLists.txt
src/c/production/flecs/include/: flecs_pinvoke.h  pinvoke.h
src/c/production/flecs/src/: flecs_pinvoke.c
src/cs/: .globalconfig  Directory.Build.props  Flecs.sln
src/cs/examples/: Directory.Build.props
src/cs/examples/Flecs.Examples.HelloWorld/: Flecs.Examples.HelloWorld.csproj  Program.cs
src/cs/examples/Flecs2.Examples.HelloWorld/: Flecs2.Examples.HelloWorld.csproj
src/cs/examples/flecs-01_hello_world/: Program.cs  flecs-01_hello_world.csproj
src/cs/examples/flecs.Examples.HelloWorld/: Program.cs  flecs.Examples.HelloWorld.csproj
src/cs/production/Flecs.Bindgen/: Flecs.Bindgen.csproj  ReaderCCode.cs  WriterCSharpCode.cs
src/cs/production/Flecs.Bindgen.Runner/: Flecs.Bindgen.Runner.csproj  Program.cs
src/cs/production/Flecs.Core/: CallbacksHelper.cs  Entity.cs  EntityIterator.cs  EntityType.cs  Flecs.Core.csproj  IEcsComponent.cs  Identifier.cs  IdentifiersEnumerable.cs  Pair.cs  (+6 more)
(+92 files in other folders)
